# Bbox3d

./: .gitignore  README.md  main.py  pyproject.toml
configs/: best_params.json  best_params_diou.json  best_params_iou.json  tune.yaml
data/: splits.npz
data/889a9fb5-9915-11ee-9103-bbb8eae05561/: bbox3d.npy  mask.npy
data/89ceef14-9915-11ee-9103-bbb8eae05561/: bbox3d.npy
data/89ceef19-9915-11ee-9103-bbb8eae05561/: bbox3d.npy  mask.npy
data/8b061a8a-9915-11ee-9103-bbb8eae05561/: bbox3d.npy  mask.npy
data/8b061a8b-9915-11ee-9103-bbb8eae05561/: bbox3d.npy  mask.npy
data/8b061a8c-9915-11ee-9103-bbb8eae05561/: bbox3d.npy  mask.npy
data/9950f10b-9915-11ee-9103-bbb8eae05561/: bbox3d.npy
data/9e1ed847-9915-11ee-9103-bbb8eae05561/: bbox3d.npy  mask.npy
data/a0818baa-9915-11ee-9103-bbb8eae05561/: bbox3d.npy
data/inference/859074c3-9915-11ee-9103-bbb8eae05561/: bbox3d.npy  mask.npy
data/inference/9950f10b-9915-11ee-9103-bbb8eae05561/: mask.npy
data/inference/9ce28685-9915-11ee-9103-bbb8eae05561/: bbox3d.npy  (+1 more)
deployment/: model.onnx
notebooks/: 02_preprocessing.ipynb  03_training.ipynb  04_tuning.ipynb  05_inference_optim.ipynb
outputs/models/: best_model.pth  best_model_diou.pth  best_model_diou_lr_cos.pth
scripts/: benchmark_compare.py  benchmark_onnx.py  export_onnx.py  inference.py  test.py  train.py  tune.py
src/: loss.py  model.py  preprocess.py  visualize.py
src/data/: dataset.py  preprocess.py  splits.py
src/logging/: base_logger.py  mlflow_logger.py
src/metrics/: iou3d.py
src/train/: trainer.py
src/utils/: config.py  plot.py
