[project]
name = "3d-boundingbox-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "ruff>=0.15.10",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "protobuf==3.20.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
train = "scripts.train:main" 
tune = "scripts.tune:main"
test = "scripts.test:main"

[tool.uv]
package = true 

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "src*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
